<resources>
    <string name="app_name">GLO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_createAccount">No Account? Create One!</string>
    <string name="button_signin">Sign In</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_title">Account Registration</string>
    <string name="register_email">Email</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_passwordcopy">Re-enter Password</string>
    <string name="register_phone">Phone</string>
    <string name="register_pin">Pin</string>
    <string name="register_button">Register!</string>
</resources>
